# Quadruped

./: README.md
coding/quad_ws/devel/: local_setup.sh
coding/quad_ws/devel/include/unitree_legged_msgs/: BmsCmd.h  BmsState.h  HighCmd.h  HighState.h  LowCmd.h  LowState.h
coding/quad_ws/devel/include/wtr_serial/: actor_1.h
coding/quad_ws/devel/lib/main_controller/: demo  remap
coding/quad_ws/devel/lib/pkgconfig/: cheetah_model.pc  dog_v4.pc  main_controller.pc  pigot_stl_model.pc  state_estimate.pc  unitree_legged_msgs.pc  wtr_dog.pc  wtr_serial.pc
coding/quad_ws/devel/lib/wtr_serial/: main
coding/quad_ws/src/cheetah_model/: CMakeLists.txt
coding/quad_ws/src/cheetah_model/config/: controllers.yaml  joint_names_cheetah_model.yaml
coding/quad_ws/src/cheetah_model/launch/: cheetah_controller.xml  cheetah_model_description.xml  display.launch  gazebo.launch
coding/quad_ws/src/dog_v4/: CMakeLists.txt  dog_v4.perspective  dog_v4.rviz  readme.md
coding/quad_ws/src/main_controller/: CMakeLists.txt
coding/quad_ws/src/main_controller/App/: InitCheck.cpp  remap_gazebo.cpp
coding/quad_ws/src/main_controller/include/: FiniteStateMachine.h
coding/quad_ws/src/main_controller/include/CommandMapper/: MapperToGazebo.h
coding/quad_ws/src/main_controller/include/Controllers/: FootSwingTrajectory.h  GaitScheduler.h  LegController.h  PlanningContactPosition.h
coding/quad_ws/src/main_controller/include/ConvexMPC/: ConvexMPC.h  Solver.h
coding/quad_ws/src/main_controller/include/MathTools/: CAR.h  GaitTable.h  GaitTransition.h  Hopf.h  Interpolation.h  KinematicModel.h  LegKinematics.h  Utils.h
coding/quad_ws/src/main_controller/include/StateEstimate/: A1BasicEKF.h  StateEstimate.h
coding/quad_ws/src/main_controller/include/StateWorkerInclude/: GallopWorker.h  InitCheck.h  PaceWorker.h  StandWorker.h  StateWorker.h  TrotWorker.h  WalkWorker.h  Workers_common_include.h  common_defination.h  common_parameter.h
coding/quad_ws/src/main_controller/include/reference/: common_include.h
coding/quad_ws/src/main_controller/include/reference/CPG/: CPG.c  CPG.h
coding/quad_ws/src/main_controller/launch/: main.launch
coding/quad_ws/src/main_controller/src/: demo.cpp
coding/quad_ws/src/state_estimate/: CMakeLists.txt
coding/quad_ws/src/state_estimate/include/: Common_Definition.h  Controller.h  OCEKF.h  Rotations.h
coding/quad_ws/src/state_estimate/src/: Controller.cpp  OCEKF.cpp
(+72 files in other folders)
